--- a/adminpage1.html
+++ b/adminpage1.html
@@ -22,7 +22,7 @@
                           Profile
                         </a>
                         <div class="dropdown-menu">
-                          <a class="dropdown-item" href="#" style="color:#000;font-size: 14px;">Change Password</a>
+                          <a class="dropdown-item" href="#changePasswordModal" data-toggle="modal" style="color:#000;font-size: 14px;">Change Password</a>
                           <a class="dropdown-item" href="#" style="color:#000;font-size: 14px;">Logout</a>
                         </div>
                 </div>
@@ -42,7 +42,8 @@
                             <h2><b>Flight Details</b></h2>
                         </div>
                         <div class="col-sm-6">
-                            <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><span>Add Flight</span></a>				
+                            <a href="#saveChangesModal" class="btn btn-success" data-toggle="modal"><span>Save Changes</span></a>								
+                            <a href="#addModal" class="btn btn-info" data-toggle="modal"><span>Add Flight</span></a>
                         </div>
                     </div>
                 </div>
@@ -60,8 +61,8 @@
                             <td>280</td>
                             <td>200</td>
                             <td>
-                                <a href="#editEmployeeModal" class="edit" onclick="defaultFlight(this.parentNode.parentNode)"  data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                                <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                                <a href="#editModal" class="edit" onclick="defaultFlight(this.parentNode.parentNode)"  data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                <a href="#deleteModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                             </td>
                         </tr>
                     </tbody>
@@ -69,7 +70,7 @@
             </div>
         </div>
         <!-- Edit Modal HTML -->
-        <div id="addEmployeeModal" class="modal fade">
+        <div id="addModal" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
                         <div class="modal-header">						
@@ -100,7 +101,7 @@
             </div>
         </div>
         <!-- Edit Modal HTML -->
-        <div id="editEmployeeModal" class="modal fade">
+        <div id="editModal" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <form id="editFlight">
@@ -131,7 +132,7 @@
             </div>
         </div>
         <!-- Delete Modal HTML -->
-        <div id="deleteEmployeeModal" class="modal fade">
+        <div id="deleteModal" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <form id="deleteForm">
@@ -152,5 +153,53 @@
             </div>
         </div>
 
+        <div id="changePasswordModal" class="modal fade">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <form id="changePasswordForm">
+                        <div class="modal-header">						
+                            <h4 class="modal-title">Change Password</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        </div>
+                        <div class="modal-body">					
+                            <div class="form-group">
+                                <label>New Password</label>
+                                <input type="password"  name="pwd1" class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                <label>Confirm Password</label>
+                                <input type="password"  name="pwd2" class="form-control" required>
+                            </div>				
+                        </div>
+                        <div class="modal-footer">
+                            <input type="button" class="btn btn-danger" data-dismiss="modal" value="Cancel">
+                            <input type="button" class="btn btn-primary" data-dismiss="modal" value="Save">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div id="saveChangesModal" class="modal fade">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <form id="saveChangesForm">
+                            <div class="modal-header">						
+                                <h4 class="modal-title">Save Changes</h4>
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            </div>
+                            <div class="modal-body">
+                                <br>					
+                                <h6>Are you sure you want to save these changes?</h6>
+                                <br>
+                            </div>
+                            <div class="modal-footer">
+                                <input type="button" class="btn btn-danger" data-dismiss="modal" value="Cancel">
+                                <input type="button" class="btn btn-success" data-dismiss="modal" value="Save">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
 </body>
 </html>
