--- a/adminpage3.html
+++ b/adminpage3.html
@@ -22,7 +22,7 @@
                           Profile
                         </a>
                         <div class="dropdown-menu">
-                          <a class="dropdown-item" href="#" style="color:#000;font-size: 14px;">Change Password</a>
+                            <a class="dropdown-item" href="#changePasswordModal" data-toggle="modal" style="color:#000;font-size: 14px;">Change Password</a>
                           <a class="dropdown-item" href="#" style="color:#000;font-size: 14px;">Logout</a>
                         </div>
                 </div>
@@ -93,5 +93,33 @@
             </div>
         </div>
     </div>
+
+    <div id="changePasswordModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form id="changePasswordForm">
+                    <div class="modal-header">						
+                        <h4 class="modal-title">Change Password</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">					
+                        <div class="form-group">
+                            <label>New Password</label>
+                            <input type="password"  name="pwd1" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Confirm Password</label>
+                            <input type="password"  name="pwd2" class="form-control" required>
+                        </div>				
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-danger" data-dismiss="modal" value="Cancel">
+                        <input type="button" class="btn btn-primary" data-dismiss="modal" value="Save">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
